chore: cleanup RuleVariableValueMapBuilder